# mcl-vs-kalman

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-tests.yml  deploy.yml
demo/: index.html  index.js  styles.css  wasm_module.wasm
src/: Kalman.cpp  Kalman.hpp  MCL.cpp  MCL.hpp  Reader.cpp  Reader.hpp  State.hpp  bindings.cpp  main.cpp  test  test.cpp
src/Kalman/: Kalman.cpp  Kalman.hpp  Runner.cpp  Runner.hpp
src/MCL/: MCL.cpp  MCL.hpp  Runner.cpp  Runner.hpp
